--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,25 @@ h1 {
   justify-content: center;
 }
 
-/*Change sub heading color*/
+/*Change sub heading color and center with flexbox*/
 h3 {
   color: darkgoldenrod;
+  display: flex;
+  justify-content: center;
+}
+
+/*Basic styling for image placeholders*/
+.image-placeholder {
+  display: flex;
+  justify-content: center;
+  margin: 15px 0;
+  padding: 20px;
+  background-color: lightgray;
+  border: 2px dashed gray;
+}
+
+.image-placeholder p {
+  margin: 0;
+  color: gray;
+  font-style: italic;
 }
