--- a/styles.css
+++ b/styles.css
@@ -10,9 +10,30 @@
   justify-content: center;
 }
 
-.darkMode{
-  color: #d90c8d;
+.darkModeButton{
+  background-color: #d90c8d;
+  color:pink
+
 }
+
+#darkMode{
+    font-size: 30px;
+    height: 55px;
+    width: 55px;
+    margin-top: 10px;
+    padding: 8px;
+    margin-top: 30px;
+    background-color: rgb(241, 66, 165);
+    color: pink;
+    cursor: pointer;
+    border-radius: 300px;
+    transition: background-color 0.3s ease;
+    border: 2.5px solid rgb(108, 2, 83);
+    float: right;
+
+} 
+
+
 
 h1 {
   color: rgb(221, 93, 191);
